Platform 1.84

* The "/admin/stop-announcing" resource on the admin port now accepts the
  "server.admin" role in the SecurityContext for authorization.

* JSON

  - We no longer write an explicit null value when serializing an empty
    value of type Optional.

* HttpClient

  - We deprecated RuntimeIOException and made it a subclass of
    UncheckedIOException. Users should switch the former to the latter.

* Logging

  We added an in-memory buffer to reduce locking contention around logging.

* Library Upgrades

  - Base docker image to 8u171-jdk (was 8u162-jdk)
  - mockito to 2.21.0 (was 2.2.28)˚
    - Added MockitoSession for strict mocking
  - objenesis to 2.6 (was 1.3)

Platform 1.83

* OpenApi

  We added to OpenApiModule the "/admin/openapi-admin.json" and
  "/admin/openapi-admin.yaml" resources on the admin port, returning the Open
  API Specification (OAS) description of the admin port's protocol.

* We removed the /admin/wadl resource from the admin port.

* HttpClient

  We modified HttpClient to avoid allocating a large byte array by buffering
  response data in chunks.

  We added BasicAuthRequestFilter, a request filter which performs basic
  authentication.

  [Bug] Request now correctly validates the URI scheme and that a URI with
  a scheme has a host.

* Stats

  We replaced the implementation of QuantileDigest with a more
  memory-efficient one.

  We fixed a thread safety issue in the Distribution copy constructor.

* Configuration

  We added ConditionalModule.installModuleIf() which conditionally installs
  a Guice module based on configuration.

  ConfigurationProvider has been marked as deprecated. It will no longer be
  public.

* JSON

  We improved the format of JsonCodec parsing exception messages.

  We added JsonCodec.toJsonWithLengthLimit().

* We extended the JaxrsBinder.bindInjectionProvider() DSL to accept a
  java.util.function.Supplier, not just its subclass
  com.google.common.base.Supplier.
